--- a/DocTimes/Views/Invoice/Create.cshtml
+++ b/DocTimes/Views/Invoice/Create.cshtml
@@ -172,13 +172,13 @@
 
     </div> *@
 </div>
-<div class="mb-3 mr-3 ml-2">
+<div class="card">
 
     <div class="card-header bg-body-tertiary">
-        <h5 class="mb-0">Create Invoice<i class="fas fa-arrow-left"></i></h5>
+        <h5 class="mb-0"><i class="fas fa-arrow-left"></i>Create Invoice</h5>
     </div>
-    <div class="card-body fs-10 p-0">
-        <div class="bg-body-tertiary">
+    <div class="card-body">
+        
 
             <div class="tab-content">
                 <div class="row g-3">
@@ -523,7 +523,7 @@
                     <p class="fs-10 mt-3 mb-0">By clicking <strong>Confirm & Pay </strong> button you agree to the <a href="#!">Terms &amp; Conditions</a></p>
                 </div>
             </div>
-        </div>
+         
     </div>
     
    
