--- a/DocTimes/Views/Services/Index.cshtml
+++ b/DocTimes/Views/Services/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="row mt-5 mt-lg-0 mt-xl-5 mt-xxl-0">
+﻿@using DocTimes.Views.Services
+
+ 
+
+<div class="row mt-5 mt-lg-0 mt-xl-5 mt-xxl-0">
     <div class="col-lg-4 col-xl-4 col-xxl-4 h-100">
         <div class="card">
             <div class="card-header bg-body-tertiary">
