--- a/DocTimes/Views/Shared/_Layout.cshtml
+++ b/DocTimes/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
     <meta name="msapplication-TileImage" content="~/assets/img/favicons/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
     <script src="~/assets/js/config.js"></script>
-
+    <link href="~/vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
     <script src="~/vendors/simplebar/simplebar.min.js"></script>
     <link href="~/vendors/choices/choices.min.css" rel="stylesheet">
     <link href="~/vendors/flatpickr/flatpickr.min.css" rel="stylesheet">
@@ -2017,6 +2017,8 @@
                 <div id="MainContainer">
                     @RenderBody()
                 </div>
+                <script src="_framework/blazor.server.js"></script>
+
 
                 <script>
                     document.addEventListener("DOMContentLoaded", function () {
@@ -2072,6 +2074,7 @@
                         bindSpaLinks();
                     });
                 </script>
+            </div>
             </main>
     <!-- ===============================================-->
     <!--    End of Main Content-->
@@ -2218,12 +2221,10 @@
     <script src="~/assets/js/theme.js"></script>
     <script src="~/vendors/choices/choices.min.js"></script>
     <script src="~/assets/js/flatpickr.js"></script>
+  
+    <script src="~/vendors/swiper/swiper-bundle.min.js"></script>
     
-    
-    
-
-
-
+       
 </body>
 
 </html>
