--- a/DocTimes/Views/Shared/_Layout.cshtml
+++ b/DocTimes/Views/Shared/_Layout.cshtml
@@ -104,7 +104,7 @@
                                         <span class="nav-link-icon"><span class="fas fa-chart-pie"></span></span><span class="nav-link-text ps-1">Dashboard</span>
                                     </div>
                                 </a>
-                                <ul class="nav collapse" id="dashboard">
+                                <ul class="nav collapse show" id="dashboard">
                                     <li class="nav-item">
                                         <a class="nav-link" href="#" data-spa="WorkStatus/Progress" data-id="1">
                                             <div class="d-flex align-items-center">
